# open-browser-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/open_browser_agent/: __init__.py  actions.py  browser.py  cli.py  executor.py  observer.py  planner.py  replay.py  trace.py  verifier.py
src/open_browser_agent/fixtures/: __init__.py  form_fill.html  table_scrape.html  wikipedia_summary.html
src/open_browser_agent/schemas/: __init__.py  observation.py  step.py  trace.py
src/open_browser_agent/tasks/: __init__.py  form_fill.py  registry.py  table_scrape.py  wikipedia_summary.py
tests/: test_actions.py  test_browser.py  test_cli.py  test_executor.py  test_observer.py  test_planner_and_tasks.py  test_registry.py  test_trace_replay_verifier.py
