[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-browser-agent"
version = "0.1.0"
description = "A small browser-use agent with tracing and replay."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Open Browser Agent Contributors" }
]
dependencies = [
  "playwright>=1.54,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=6.0,<7.0",
]

[project.scripts]
oba = "open_browser_agent.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
